...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:id="@+id/lay_search"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"

                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/iv_gps_search"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:icon="@drawable/ic_baseline_gps_fixed_24" />
...
