<resources>
    <string name="app_name">Qipao Shop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="Emaillabel">Email</string>
    <string name="PasswordLabel">Password</string>
    <string name="EmailRequiredlabel">Email*</string>
    <string name="SearchLabel">Search product</string>
    <string name="ProductDetail">Product Detail</string>
    <string name="PasswordRequiredLabel">Password*</string>
    <string name="ConfirmPasswordRequiredLabel">Confirm Password*</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="google_login">Google Login</string>
    <string name="google_signup">Google Signup</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="cardDefaultTItle">Title</string>
...
    <string name="cardDefaultContent">Content</string>
    <string name="cardHomeAction1">Action1</string>
    <string name="cardHomeAction2">Action2</string>
    <string name="loading_title" />
    <string name="loading_message">Loading...</string>
    <string name="search">Search</string>
    <string name="addToCart">Add to cart</string>
    <string name="comment">Comment</string>
    <string name="checkOut">Check Out</string>
    <string name="title_soppingCart">Shopping Cart</string>
    <string name="save">Save</string>
    <string name="changePwd">Change Password</string>
    <string name="changeProfile">Change Profile</string>
    <string name="displayNameRequired">Display Name*</string>
    <string name="NameRequired">Name*</string>
    <string name="companyCodeRequired">Company Code*</string>
    <string name="user">User</string>
    <string name="staff">Staff</string>
    <string name="avatar">Avatar</string>
    <string name="createPost">Create Post</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="DescriptionRequired">Description*</string>
    <string name="priceRequired">Price*</string>
    <string name="upload">Upload</string>
    <string name="fingerPrint">FingerPrint</string>
    <string name="editPost">Edit Post</string>

</resources>
