...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addToShoppingCartBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{product.canEdit?``:@string/addToCart}"
                    android:layout_weight="1"
                    app:iconGravity="textStart"
                    app:icon="@drawable/ic_baseline_shopping_cart_24"
...
