<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.login.LoginActivity">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.vt6002cem.ui.login.LoginViewModel" />
    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/ErrorInfo"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:background="#E22323"
        android:textColor="#FFFFFF"
        android:text=""
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EmailRequiredlabel"
        app:errorEnabled="true"
        app:emailValidator="@{viewModel.user.email}"
        app:helperTextTextColor="@color/design_default_color_error"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.user.email}"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PasswordRequiredLabel"
        app:passwordValidator="@{viewModel.user.password}"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"

        app:helperTextTextColor="@color/design_default_color_error"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@={viewModel.user.password}"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="login"
        android:text="@string/log_in"

        />


    <Button
        android:id="@+id/googleLoginButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_login"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:onClick="googleSignin"
        app:icon="@drawable/ic_dashboard_black_24dp" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.75"
            android:text="Do you have not an account?"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Register"
            android:onClick="goToRegister"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
</layout>