<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="product"
            type="com.example.vt6002cem.model.Product" />
        <variable
            name="viewModel"
            type="com.example.vt6002cem.ui.post.EditPostViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editPost.EditPostFragment"
    >
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"

        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/orange" />


        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="200dp"
            android:src="@mipmap/ic_image_placeholder_foreground" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/captureImageBtn"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upload"
                app:icon="@drawable/ic_baseline_camera_alt_24" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadImageBtn"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upload"
                app:icon="@drawable/ic_baseline_file_upload_24" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12pt"
            android:orientation="vertical"

            android:padding="12dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NameRequired"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/design_default_color_error"
                app:startIconDrawable="@drawable/ic_baseline_drive_file_rename_outline_24"
                app:textValidator="@{product.name}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={product.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/DescriptionRequired"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/design_default_color_error"
                app:startIconDrawable="@drawable/ic_baseline_description_24"
                app:textValidator="@{product.about}">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={product.about}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/priceEdit"
                android:hint="@string/priceRequired"
                app:errorEnabled="true"
                app:numberValidator="@{product.price}"
                app:helperTextTextColor="@color/design_default_color_error"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={product.priceString}" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>